Very first commit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,26 @@
 [package]
 name = "HorseShoe"
+description = "A Rust Language Infinitesimal Calculus crate"
+homepage = "https://github.com/YakoYakoYokuYoku/Horse-Shoe"
+keywords = ["mathematics", "numerics", "calculus"]
+categories = ["algorithms", "science", "calculus"]
+license = "MIT"
+repository = "https://github.com/YakoYakoYokuYoku/Horse-Shoe"
 version = "0.1.0"
+readme = "README.md"
 authors = ["YakoYakoYokuYoku"]
 autobins = false
 
 [dependencies]
-num = "*"
-num-traits = "*"
-num-complex = "*"
 
-[[bin]]
-name = "numder"
-path = "src/numder.rs"
+[dependencies.num-traits]
+version = "0.2.6"
+default-features = false
 
-# [lib]
-# name = "math"
-# path = "../RNT/src/math.rs"
+[dependencies.num-complex]
+version = "0.2.1"
+default-features = false
+
+[lib]
+name = "lib"
+path = "src/lib.rs"
